--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_screenutil: ^5.9.3
   flutter_bloc: ^9.0.0
+  persistent_bottom_nav_bar: ^6.2.1
+  hidable: ^1.0.6
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
