--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   persistent_bottom_nav_bar: ^6.2.1
   hidable: ^1.0.6
   carousel_slider: ^5.0.0
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
