--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   http: ^1.3.0
   bloc: ^9.0.0
   meta: ^1.15.0
+  firebase_auth: ^5.5.1
+  firebase_core: ^3.12.1
 
 dev_dependencies:
   flutter_test:
