--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,11 @@ dependencies:
   http: ^1.3.0
   bloc: ^9.0.0
   meta: ^1.15.0
-  firebase_auth: ^5.5.1
-  firebase_core: ^3.12.1
+  # firebase_auth: ^5.5.1
+  # firebase_core: ^3.12.1
+  firebase_core: ^2.24.0
+  firebase_auth: ^4.16.0
+firebase_auth: ^4.16.0
 
 dev_dependencies:
   flutter_test:
