--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,11 @@ dependencies:
   firebase_core: ^2.24.0
   firebase_auth: ^4.16.0
   google_sign_in: ^6.2.2
+  image_picker: ^1.0.7
+  permission_handler: ^11.4.0
+  insta_assets_picker: ^3.1.0
+  flutter_localizations:
+    sdk: flutter
 firebase_auth: ^4.16.0
 
 dev_dependencies:
