--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   # firebase_core: ^3.12.1
   firebase_core: ^2.24.0
   firebase_auth: ^4.16.0
+  google_sign_in: ^6.3.0
 firebase_auth: ^4.16.0
 
 dev_dependencies:
